6/9/2022 creating an add employee

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -191,7 +191,7 @@
                   <!-- <div class="dropdown-divider"></div> -->
 
                   <!-- Link -->
-                   <a class="navbar-dropdown-menu-media-link" href="./snippets/index.html">
+                   <a class="navbar-dropdown-menu-media-link" href="/new-Employee">
                     <div class="d-flex">
                       <div class="flex-shrink-0">
                         <span class="svg-icon svg-icon-sm text-primary">
