--- a/views/index.ejs
+++ b/views/index.ejs
@@ -168,7 +168,7 @@
                 <!-- Mega Menu -->
                 <div class="hs-mega-menu hs-position-right dropdown-menu" aria-labelledby="docsMegaMenu" style="min-width: 20rem;">
                   <!-- Link -->
-                  <a class="navbar-dropdown-menu-media-link" href="./documentation/index.html">
+                  <a class="navbar-dropdown-menu-media-link" href="/employees">
                      <div class="d-flex">
                       <div class="flex-shrink-0">
                         <span class="svg-icon svg-icon-sm text-primary">
@@ -332,13 +332,13 @@
             <div class="col-md-8 col-lg-6">
               <div class="ps-lg-5">
                 <!-- Card -->
-                <div class="card card-lg">
+                <!--<div class="card card-lg">
                   <div class="card-body">
                     <div class="row align-items-sm-center mb-5">
                       <div class="col-sm-auto order-sm-2 mb-3 mb-sm-0">
                         <img class="avatar avatar-xxl avatar-4x3" src="/svg/illustrations/oc-chatting.svg" alt="Image Description">
                       </div>
-                      <!-- End Col -->
+                       End Col -->
 
                       <div class="col-sm">
                         <!-- <h5 class="card-title">Join Space</h5> -->
@@ -348,58 +348,58 @@
                     </div>
                     <!-- End Row -->
 
-                    <form>
-                      <!-- Form -->
+                    <!--<form>
+                       Form 
                       <div class="mb-4">
                         <label class="form-label" for="registerEmail">Your name</label>
                         <input type="text" class="form-control form-control-lg" name="name" id="registerName" placeholder="Type your name" aria-label="Type your name" required data-msg="Please enter your name.">
                       </div>
-                      <!-- End Form -->
+                       End Form 
 
-                      <!-- Form -->
+                       Form 
                       <div class="mb-4">
                         <label class="form-label" for="registerEmail">Your email</label>
                         <input type="email" class="form-control form-control-lg" name="email" id="registerEmail" placeholder="example@site.com" aria-label="example@site.com" required data-msg="Please enter a valid email address.">
                       </div>
-                      <!-- End Form -->
+                      <!-- End Form 
 
                       <div class="mb-4">
                         <label class="form-label" for="registerEmail">Company Position</label>
 
                         <div class="row">
                           <div class="col-sm mb-4 mb-sm-0">
-                            <!-- Form Check -->
+                            <!-- Form Check 
                             <label class="form-control form-control-lg" for="registerRadio1">
                               <span class="form-check form-check-custom">
                                 <input type="radio" class="form-check-input" name="registerRadio" id="registerRadio1" checked>
                                 <span class="form-check-label">Manager</span>
                               </span>
                             </label>
-                            <!-- End Form Check -->
+                            <!-- End Form Check 
                           </div>
 
                           <div class="col-sm">
-                            <!-- Form Check -->
+                            <!-- Form Check 
                             <label class="form-control form-control-lg" for="registerRadio2">
                               <span class="form-check form-check-custom">
                                 <input type="radio" class="form-check-input" name="registerRadio" id="registerRadio2">
                                 <span class="form-check-label">Employee</span>
                               </span>
                             </label>
-                            <!-- End Form Check -->
+                            <!-- End Form Check 
                           </div>
                         </div>
-                        <!-- End Row -->
+                        <!-- End Row 
                       </div>
 
                       <div class="d-grid text-center">
                         <button type="submit" class="btn btn-primary btn-lg">Get Started</button>
                         <span class="form-text">Need help? <a class="link" href="./page-help-center.html">Visit our Help Center <i class="bi-chevron-right small ms-1"></i></a></span>
                       </div>
-                    </form>
+                    </form>-->
                   </div>
                 </div>
-                <!-- End Card -->
+                <!-- End Card--> 
               </div>
             </div>
             <!-- End Col -->
