--- a/views/new-Employee.ejs
+++ b/views/new-Employee.ejs
@@ -61,7 +61,7 @@
                 <li class="nav-divider"></li>
                 <!-- Pages -->
                 <li class="hs-has-mega-menu ">
-                  <a id="pagesMegaMenu" class="hs-mega-menu-invoker  " href="#" role="button" aria-expanded="false">Employee-List</a>
+                  <a id="pagesMegaMenu" class="hs-mega-menu-invoker  " href="/employees" role="button" aria-expanded="false">Employee-List</a>
   
                 
                 </li>
