--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,10 +4,10 @@
             <a href="/employee-list" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
-            <a href="#" class="nav-link">Projects</a>
+            <a href="/project" class="nav-link">Project</a>
         </li>
         <li class="nav-item">
-            <a href="#" class="nav-link">Payroll</a>
+            <a href="/payroll" class="nav-link">Payroll</a>
         </li>
         <li class="nav-divider"></li>
         <li class="nav-item">
