--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -19,3 +19,4 @@
 
 <!-- CSS Space Template -->
 <link rel="stylesheet" href="/css/theme.min.css?v=1.0">
+<link rel="stylesheet" href="print.css" media="print">
