--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
 
-<div class="container-fluid mt-3 col-50 pt-5 bg-dark">
+<div class="container-fluid mt-3 col-50 pt-5 bg-dark" style="bottom: 0; position:fixed;margin-top: inherit;">
     <p class="text-center text-white">2022&copy; EmployeeManagement</p>
 </div>
