--- a/views/payroll.ejs
+++ b/views/payroll.ejs
@@ -6,7 +6,35 @@
 <body>
    <%- include('./partials/header.ejs'); %>
    <main>
-    
-   </main> 
+    <div class="container-fluid">
+        <h1 class="text-center">Payroll</h1>
+    </div>
+    <div class="container-fluid mt-2">
+        <div class="row">
+            <div class="col-12">
+                <table class="table table-striped">
+                    <tr>
+                        <th class="text-center">Payroll ID</th>
+                        <th class="text-center">Employee ID</th>
+                        <th class="text-center">Salary</th>
+                        <th class="text-center">Commission</th>
+                    </tr>
+                    <tbody>
+                        <% for(var i=0;i<payrollData.length;i++){
+                            %>
+                            <tr>
+                               <td class="text-center"><%=payrollData[i].payrollId %></td>
+                               <td class="text-center"><%=payrollData[i].employeeId %></td>
+                               <td class="text-center"><%=payrollData[i].salary %></td>
+                               <td class="text-center"><%=payrollData[i].commission %></td> 
+                            </tr>
+                        <%} %>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+   </main>
+   
 </body>
 </html>
