--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -20,3 +20,4 @@
 <!-- CSS Space Template -->
 <link rel="stylesheet" href="/css/theme.min.css?v=1.0">
 <link rel="stylesheet" href="print.css" media="print">
+<link rel="stylesheet" href="/css/main.css">
